<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HistoryFragment">

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/neumorphCardView_title_historique"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/title_historique"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pepsi"
                    android:gravity="center_horizontal"
                    android:text="@string/historique"
                    android:textAlignment="center"
                    android:textColor="@color/blue_logo"
                    android:textSize="20sp"
                    android:textStyle="normal" />

        </soup.neumorphism.NeumorphCardView>

        <LinearLayout
            android:id="@+id/spinner_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/neumorphCardView_title_historique"
            android:layout_centerHorizontal="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                        <Spinner
                            android:id="@+id/spinner_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                        <EditText
                            android:id="@+id/edit_date_debut"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/date_debut"/>

                        <EditText
                            android:id="@+id/edit_date_fin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/date_fin"/>

                </LinearLayout>

        </LinearLayout>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/spinner_layout"
            android:layout_centerHorizontal="true">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

        </ScrollView>



</RelativeLayout>